testcases/negative/invalid_uri_scheme.vcf
BEGIN:VCARD
VERSION:4.0
FN:John Doe
URL:not a valid url at all
END:VCARD
